Add pre-commit and linter; fix Makefile; fix Travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,5 @@
 language: go
 install:
-    - go get github.com/alecthomas/gometalinter
-    - go get github.com/makkes/assert
+    - pip install pre-commit
 script:
-    - gometalinter --install
-    - gometalinter -D errcheck ./...
-    - go test ./...
+    - make test
