--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: go
 go:
-  - 1.13
+  - 1.16
 env:
   - GO111MODULE=on
 install:
     - pip install --user pre-commit
 script:
-    - make test
+    - make ci
